--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,25 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Card from '@/components/ui/Card.astro';
+import { cardData } from '@/data/card-data';
+import Layout from '@/layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+  <h1>TOPページ</h1>
+
+  <div class="card__container">
+    {cardData.map((card) => (
+      <Card card={card} />
+    ))}
+  </div>
 </Layout>
+
+<style lang="scss">
+  .card__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    margin: 3rem 2rem;
+    padding-inline: 1rem;
+  }
+</style>
